SERVER-21896 reload ChunkManager cache when shard does not exists